# Karkinolution

./: .gitignore  CellCoord.py  Crabs.py  CrabsMentality.py  LICENSE  Motor.py  README.md  Stats.py  Territory.py  Visualizer.py  actions.py  cell.py  changes.md  coord.py  design.txt  error.py  instincts.py  main.py  map.py  namegenerator.py  perception.py  pyproject.toml  run.py  test.py  world.py
.github/workflows/: tests.yaml
core/: basestorage.py  cell.py  coord.py  error.py  map.py  world.py
decisions/: actions.py  instincts.py  intent.py  perception.py  presets.py  resolvers.py
docs/: README.md  architeture.md  core_contract.yaml  requirements.txt
map/: map.py  world.py
organism/: creatures.py  genetics.py  identity.py  ontology.py  stats.py
src/karkinolution/: __main__.py
src/karkinolution/core/: error.py
src/karkinolution/decisions/: instincts.py  intent.py  perception.py  presets.py  resolvers.py
src/karkinolution/organism/: creatures.py  genetics.py  identity.py  ontology.py  stats.py
src/karkinolution/systems/: death.py  metabolism.py  physics.py  reproduction.py  (+1 more)
systems/: biology.py  death_system.py  metabolism_system.py  physics.py  presets.py  pressets.py  reproduction.py  reproductivebuffer.py  serializer.py
tests/: test_death.py  test_energy.py  test_move.py  test_reproduction.py
tick/: lifecycle.py  worldcycle.py
ui/: interfaces.py
ui/api/: api.py  api_world_interface.py
ui/entry_points/: basic_tabs.py  easy_entry_point.py  hard_entry_point.py
ui/utils/: cli.py  visualizations.py
utils/: namegenerator.py
(+17 files in other folders)
