[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "karkinolution"
version = "0.1.0"
dependencies = [
    "rich",
    "noise",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]